# msgpack-rust

./: README.md
nostd/: Cargo.toml
nostd/src/: error.rs  io_ext.rs  lib.rs
nostd/src/io/: cursor.rs  error.rs  read.rs  write.rs
rmp/: Cargo.toml
rmp-serde/: Cargo.toml
rmp-serde/src/: decode.rs  encode.rs  lib.rs
rmp/src/: lib.rs
rmp/src/decode/: mod.rs
rmp/src/encode/: mod.rs
