[package]
name = "rmp-serde"
version = "0.14.3"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Serde bindings for RMP"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp-serde"
readme = "../README.md"
keywords = ["msgpack", "MessagePack", "serde", "serialization"]
categories = ["encoding"]
edition = "2018"

[dependencies]
nostd = { path = "../nostd", optional = true }
byteorder = { version = "1.3.2", default-features = false }
serde = { version = "1.0.99", default-features = false }
rmp = { version = "0.8.8", path = "../rmp", default-features = false }

[dev-dependencies]
serde_bytes = "0.11.2"
serde_derive = "1.0.99"

[features]
default = ["std"]
std = [ "byteorder/std", "serde/std", "rmp/std" ]
alloc = [ "nostd", "serde/alloc", "rmp/alloc" ]
