[package]
name = "rmp"
version = "0.8.9"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "Pure Rust MessagePack serialization implementation"
repository = "https://github.com/3Hren/msgpack-rust"
documentation = "https://docs.rs/rmp"
readme = "README.md"
keywords = ["msgpack", "MessagePack"]
categories = ["encoding"]
edition = "2018"

[dependencies]
nostd = { path = "../nostd", optional = true }
byteorder = { version = "1.3.2", default-features = false }
num-traits = { version = "0.2.8", default-features = false }

[dev-dependencies]
quickcheck = "0.9"

[features]
default = ["std"]
std = ["byteorder/std"]
alloc = ["nostd"]
